--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,9 @@ nav{
     flex-direction: column;
     list-style-type:none;
 }
+li{
+    margin: 5px 0;
+}
 .section1{
     display: flex;
     flex-direction: column;
@@ -80,7 +83,8 @@ img{
 hr{
     width: 10%;
     height: 5px;
-    background-color: gray;  
+    background-color: gray;
+    margin: 10px 0;  
 }
 .bt{
     text-decoration: none;
@@ -91,7 +95,7 @@ hr{
     font-weight: bold;
     border: 1px solid black;
     margin-top: 8px;
-    width: 20%;
+    width: 10%;
     min-width: 100px;
 }
 a{
@@ -120,9 +124,10 @@ a{
 }
 footer{
     display: flex;
+    flex-wrap: nowrap;
     height: 50px;
     padding: 10px;
-    background-color: gray;
+    background-color: rgb(167, 167, 167);
     font-family: 'Cabin', sans-serif;
 }
 .info{
