--- a/css/style.css
+++ b/css/style.css
@@ -32,9 +32,20 @@ li{
     flex-direction: column;
     background-color: white;
 }
-.imgprincipal{
+.principal{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+.textprincipal{
+    width: 60%;
+    font-size: 10px;
+    padding: 0 10px 10px 0;
+    position: absolute;
+    text-align: center;
+}
+.imgprincipal img{
     width: 100%;
-    height: 120%;
 }
 .redessociales{
     display: flex;
@@ -142,6 +153,10 @@ footer{
     margin-bottom: 10px;
 }
 @media (min-width: 400px){
+    .textprincipal{
+        font-size: 16px;
+        width: 40%;
+    }
     .navegador{
         flex-direction: row;
         width: 100%;
